--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,85 @@
-body {
-    background-color: teal;
+@font-face {
+    font-family:'Europa';
+    src: url("../assets/fonts/europa-bold-webfont.woff") format('woff');
+    font-weight: bold;
 }
+
+@font-face {
+    font-family:'Europa';
+    src: url("../assets/fonts/europa-regular-webfont.woff") format('woff');
+    font-weight: normal;
+}
+
+header {
+    display : flex;
+    justify-content: center;
+    background-color: rgb(74, 170, 149);
+    h1 {
+        color: rgb(250, 210, 99);
+        font-family: 'Europa';
+        font-weight: bold;
+    }
+}
+
+.main-bloc {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.menu-section {
+    width: 80%;
+    .top-section {
+        display: flex;
+        justify-content: center;
+        padding: 30px;
+    }
+    .bottom-section {
+        @extend .top-section;
+        padding: 0 30px 30px 30px;
+    }
+    section {
+        width: 30%;
+        height: 200px;
+        margin-right: 10px;
+        margin-left: 10px;
+        border: 1px solid black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+
+.soon {
+    display :flex;
+    justify-content: center;
+    padding-bottom: 30px;
+    .btn {
+        padding: 10px 35px;
+        border-radius: 15px;
+        background-color: #4aaa95;
+        color: #fad263;
+        font-family: "Europa";
+        font-weight: normal;
+        font-size: 1.4em;
+    }   
+}
+
+
+footer {
+    display : flex;
+    justify-content: space-between;
+    background-color: rgb(74, 170, 149);
+    padding : 15px;
+    .legal-notice {
+        color: rgb(250, 210, 99);
+        font-family: 'Europa';
+        font-weight: normal;
+        font-size: 1.2em;
+    }
+    .contact-us {
+        @extend .legal-notice;
+    }
+}
+
