--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,8 @@
+body {
+    font-family: $font-primary, 'Roboto';
+    color: $color-primary;
+  }
+
 a, a:visited {
     text-decoration: none;
     color: $color-secondary;
