--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,7 @@
 @import "./components/buttons";
 @import "./components/menu";
 @import "./components/icon";
+@import "./pages/legal";
 
 
 .main-section {
