--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,3 +2,7 @@ $color-primary: rgb(87, 156, 136);
 $color-secondary:rgb(247, 202, 83);
 
 $font-primary: 'Europa';
+
+/* Map pour le responsive */
+
+$breakpoints: (small: 600px, medium: 900px, large: 1200px);
