--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,8 +2,10 @@ body {
     margin: 0;
 }
 
-.main-bloc {
+main {
+    width: 100%;
+    padding: 20px 0;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    justify-content: space-around;
 }
