--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,8 +1,14 @@
 footer {
     display : flex;
+    position: fixed;
+    bottom: 0;
+    left: 0;
     justify-content: space-between;
+    align-items: center;
     background-color: $color-primary;
-    padding : 15px;
+    width: 100%;
+    height: 60px;
+    
     .legal-notice {
         @include footer-sections;
     }
