--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -9,3 +9,8 @@
     src: url("../assets/fonts/europa-regular-webfont.woff") format('woff');
     font-weight: normal;
 }
+
+@font-face {
+    font-family: 'Segoe Print';
+    src: url("../assets/fonts/segoe-print.woff");
+}
