add menu themes map and menu style

--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -12,5 +12,6 @@
 
 @font-face {
     font-family: 'Segoe Print';
-    src: url("../assets/fonts/segoe-print.woff");
+    src: url("../assets/fonts/segoe-print.woff") format('woff');
+    font-weight: normal;
 }
