--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,9 @@
 @import "./layout/header";
 
 @import "./components/buttons";
-@import "./components/menu";
+@import "./components/menus";
 @import "./components/icon";
 
+@import "./pages/menu-page";
 @import "./pages/legal";
+@import "./pages/la_note_enchantee";
