--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,6 +4,8 @@ body {
 
 main {
     width: 100%;
+    max-width: 1079px;
+    margin: auto;
     padding: 20px 0;
     display: flex;
     justify-content: center;
