--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
-    font-family:'Europa';
-    src: url("../assets/fonts/europa-bold-webfont.woff") format('woff');
-    font-weight: bold;
+  font-family: "Europa";
+  src: url("../assets/fonts/europa-bold-webfont.woff") format("woff");
+  font-weight: bold;
 }
 
 @font-face {
-    font-family:'Europa';
-    src: url("../assets/fonts/europa-regular-webfont.woff") format('woff');
-    font-weight: normal;
+  font-family: "Europa";
+  src: url("../assets/fonts/europa-regular-webfont.woff") format("woff");
+  font-weight: normal;
 }
 
 @font-face {
-    font-family: 'Segoe Print';
-    src: url("../assets/fonts/segoe-print.woff") format('woff');
-    font-weight: normal;
+  font-family: "Segoe Print";
+  src: url("../assets/fonts/segoe-print.woff") format("woff");
+  font-weight: normal;
 }
