--- a/sass/components/_icon.scss
+++ b/sass/components/_icon.scss
@@ -1,6 +1,3 @@
-.fa-music {
-    font-size: 4rem;
-    background-image: linear-gradient(to right, #F04A5E, #F7926D);
-    color: transparent;
-    background-clip: text;
-  }
+.icon-music {
+  width: 60px;
+}
