--- a/sass/pages/_legal.scss
+++ b/sass/pages/_legal.scss
@@ -1,10 +1,12 @@
 .legal {
-    color: black;
-    margin: 8px;
-    h2, .effect {
-        text-align: center;
-    }
-    .article {
-        font-weight: bold;
-    }
+  color: black;
+  margin: 8px;
+  h2,
+  .effect {
+    text-align: center;
+  }
+
+  .article {
+    font-weight: bold;
+  }
 }
