--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin footer-sections {
   color: $color-secondary;
   font-weight: normal;
-  font-size: 1.4em;
+  font-size: 1.7rem;
   padding: 0 20px;
 }
 
