--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,7 @@ header {
   h1 {
     color: $color-secondary;
     font-weight: bold;
-    font-size: 3rem;
+    font-size: 3.6rem;
+    margin: 30px 0 30px 0;
   }
 }
