--- a/sass/pages/_la_note_enchantee.scss
+++ b/sass/pages/_la_note_enchantee.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     padding-bottom: 45px;
+    margin-top: 25px;
     font-family: "Devonshire", "cursive";
     font-size: 2rem;
     color: #3a0912;
