--- a/sass/pages/_menu-page.scss
+++ b/sass/pages/_menu-page.scss
@@ -13,14 +13,25 @@
         color: transparent;
         background-clip: text;
         font-size: 3.3rem;
-        margin: 0;
+        font-weight: 100;
+        margin: 10px 0 0 0;
       }
 
       h3 {
         font-family: "Segoe Print";
         font-weight: bold;
-        margin: 40px 0;
+        margin-top: 60px;
+        margin-bottom: 30px;
         font-size: 1.7rem;
+        display: flex;
+        justify-content: space-between;
+        .line {
+          width: 280px;
+        }
+        .line-right {
+          transform: rotate(180deg);
+          width: 280px;
+        }
       }
     }
   }
@@ -54,14 +65,13 @@
     align-items: center;
     width: 90%;
     box-shadow: 0 0 6px #ccc;
-    margin: 0 auto 60px auto;
+    margin: 0 auto 150px auto;
   }
 
   &__content {
     width: 85%;
     text-align: center;
     color: black;
-    margin-bottom: 30px;
 
     .underline {
       position: relative;
@@ -69,7 +79,7 @@
         content: "";
         position: absolute;
         display: block;
-        height: 2px;
+        height: 3px;
         width: 0;
         left: 0;
         transition: width 1s ease;
