--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -19,7 +19,7 @@ $menu-themes: (
     title-color-start: #3a0912,
     title-color-stop: #3a0912,
     text-family: (
-      "Sriracha",
+      "Segoe Print",
       cursive,
     ),
     text-color: #3a0912,
