--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@
 @import "./components/menus";
 @import "./components/icon";
 
-@import "./pages/menu-page";
+@import "./pages/menu_page";
 @import "./pages/legal";
 @import "./pages/la_note_enchantee";
+@import "./pages/le_chic_a_la_francaise.scss";
