--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,5 +15,4 @@
 
 @import "./pages/menu_page";
 @import "./pages/legal";
-@import "./pages/la_note_enchantee";
-@import "./pages/le_chic_a_la_francaise.scss";
+@import "./pages/menu";
