--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,8 +1,19 @@
 @mixin footer-sections {
   color: $color-secondary;
   font-weight: normal;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   padding: 0 20px;
+}
+
+@mixin button {
+  padding: 10px 35px;
+  margin-bottom: 15px;
+  border-radius: 15px;
+  background-color: $color-primary;
+  color: $color-secondary;
+  font-family: "Europa";
+  font-weight: normal;
+  font-size: 1.8rem;
 }
 
 /* Responsive */
