--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -3,14 +3,7 @@
   justify-content: center;
   padding-bottom: 80px;
   .btn {
-    padding: 10px 35px;
-    margin-bottom: 15px;
-    border-radius: 15px;
-    background-color: $color-primary;
-    color: $color-secondary;
-    font-family: "Europa";
-    font-weight: normal;
-    font-size: 2.1rem;
+    @include button;
     .dot {
       display: inline-block;
       animation: wave 1.3s linear infinite;
@@ -21,5 +14,14 @@
     .dot:nth-child(4) {
       animation-delay: -0.9s;
     }
+  }
+}
+
+.return-btn {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 80px;
+  .btn {
+    @include button;
   }
 }
