replace background-clip with webkit

--- a/sass/pages/_menu_page.scss
+++ b/sass/pages/_menu_page.scss
@@ -11,7 +11,7 @@
           map-get($theme, title-color-stop)
         );
         color: transparent;
-        background-clip: text;
+        -webkit-background-clip: text;
         font-weight: 100;
         font-size: 3.5rem;
         margin: 10px 0 60px 0;
