--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -82,7 +82,7 @@ $menu-themes: (
           map-get($theme, title-color-stop)
         );
         color: transparent;
-        background-clip: text;
+        -webkit-background-clip: text;
         margin-bottom: 20px;
         font-size: 1.7rem;
         font-weight: 100;
