--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -23,5 +23,10 @@
   padding-bottom: 80px;
   .btn {
     @include button;
+    transition: transform 450ms, background-color 300ms 150ms;
+    &:hover {
+      transform: scale(1.1);
+      background-color: darken($color-primary, 10%);
+    }
   }
 }
