--- a/sass/pages/_menu_page.scss
+++ b/sass/pages/_menu_page.scss
@@ -20,6 +20,9 @@
       #la-note-title {
         margin: 10px 0 0 0;
         font-size: 2.9rem;
+        @include media-small {
+          font-size: 2rem;
+        }
       }
 
       #le-chic-title {
@@ -35,10 +38,17 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @include media-small {
+          font-size: 0.9rem;
+          text-align: center;
+        }
 
         .line-menu-1,
         .line-menu-3 {
           width: 250px;
+          @include media-small {
+            width: 83px;
+          }
         }
         .line-menu-1:last-child,
         .line-menu-2:last-child {
@@ -63,6 +73,9 @@
     padding-top: 65px;
     .icon-music {
       width: 75px;
+      @include media-small {
+        width: 50px;
+      }
     }
   }
 
@@ -71,6 +84,9 @@
       color: black;
       font-size: 2.2rem;
       text-align: center;
+      @include media-small {
+        font-size: 1.5rem;
+      }
     }
   }
 
@@ -86,12 +102,19 @@
     width: 80%;
     box-shadow: 0 0 6px #ccc;
     margin: 0 auto 60px auto;
+    @include media-small {
+      width: 90%;
+    }
   }
 
   &__content {
     width: 85%;
     text-align: center;
     color: black;
+    @include media-small {
+      width: 90%;
+      text-align: left;
+    }
 
     .underline {
       position: relative;
@@ -115,11 +138,18 @@
       justify-content: space-between;
       font-size: 1rem;
       margin: 20px;
+      @include media-small {
+        font-size: 0.8rem;
+        margin: 20px 0;
+      }
 
       .price {
         font-size: 1.1rem;
         font-weight: bold;
         padding-left: 20px;
+        @include media-small {
+          font-size: 0.8rem;
+        }
       }
     }
 
