--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,5 +7,9 @@ header {
     font-weight: bold;
     font-size: 3.6rem;
     margin: 30px 0 30px 0;
+    @include media-small {
+      font-size: 2.8rem;
+      margin: 15px 0 15px 0;
+    }
   }
 }
