--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -2,6 +2,9 @@
   &--la-note-enchantee {
     h3 {
       font-size: 1.4rem;
+      @include media-small {
+        font-size: 1rem;
+      }
     }
     &__bottom {
       display: flex;
@@ -14,10 +17,17 @@
       p {
         font-size: 2.5rem;
         font-family: "Devonshire", "cursive";
+        @include media-small {
+          font-size: 1.7rem;
+        }
       }
       .icon-music {
         margin-right: 20px;
         width: 50px;
+        @include media-small {
+          margin-right: 10px;
+          width: 30px;
+        }
       }
     }
   }
