--- a/sass/pages/_menu_page.scss
+++ b/sass/pages/_menu_page.scss
@@ -15,18 +15,10 @@
         font-weight: 100;
         font-size: 3.5rem;
         margin: 10px 0 60px 0;
-      }
-
-      #la-note-title {
-        margin: 10px 0 0 0;
-        font-size: 2.9rem;
         @include media-small {
           font-size: 2rem;
+          margin: 10px 0;
         }
-      }
-
-      #le-chic-title {
-        font-size: 2.3rem;
       }
 
       h3 {
@@ -41,6 +33,7 @@
         @include media-small {
           font-size: 0.9rem;
           text-align: center;
+          margin-top: 30px;
         }
 
         .line-menu-1,
@@ -70,7 +63,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     padding-top: 65px;
+    @include media-small {
+      padding-top: 45px;
+    }
     .icon-music {
       width: 75px;
       @include media-small {
@@ -92,6 +89,9 @@
 
   &__footer {
     padding-bottom: 90px;
+    @include media-small {
+      padding-bottom: 45px;
+    }
   }
 
   &__container {
@@ -104,6 +104,7 @@
     margin: 0 auto 60px auto;
     @include media-small {
       width: 90%;
+      margin: 0 auto 30px auto;
     }
   }
 
