--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,12 +8,15 @@ footer {
   background-color: $color-primary;
   width: 100%;
   height: 60px;
-
-  .legal-notice {
-    @include footer-sections;
-  }
-  .contact-us {
-    @include footer-sections;
+  a {
+    color: $color-secondary;
+    font-weight: normal;
+    font-size: 1.5rem;
+    padding: 0 20px;
+    @include media-small {
+      font-size: 1.1rem;
+      padding: 0 10px;
+    }
   }
 
   a:hover {
