--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,13 +3,13 @@ header {
   justify-content: center;
   background-color: $color-primary;
   h1 {
-    color: $color-secondary;
-    font-weight: bold;
+    margin: 20px 0;
     font-size: 3.6rem;
-    margin: 20px 0 20px 0;
+    font-weight: bold;
+    color: $color-secondary;
     @include media-small {
-      font-size: 2.8rem;
       margin: 15px 0 15px 0;
+      font-size: 2.8rem;
     }
   }
 }
